--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Shared/_Layout.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Shared/_Layout.cshtml
@@ -45,6 +45,8 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+@* <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/9.0.6/signalr.min.js"></script> *@
+<script src="~/lib/signalr/signalr.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
