feat: Show connected client count in real-time with SignalR
Added logic in ExampleTypeSafeHub to track and broadcast the number of connected clients. Updated IExampleTypeSafeHub interface and client-side JavaScript to handle and display the connected client count. Modified Index.cshtml to show the client count in the UI.

--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-2">
+            <button type="button" class="btn btn-primary">
+                Connected Client Count <span id="spanConnectedClientCount" class="badge text-bg-secondary">0</span>
+            </button>
+            
             <button id="btnSendMessageAllClient">Tüm Clientlara Gönder</button>
         </div>
     </div>
