feat: Add support for sending messages to caller client
Added a new button and message display area for sending messages to the requesting (caller) client in the Index.cshtml view. Updated signalr-client.js to handle sending and receiving messages specifically for the caller client, in addition to all clients.

--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
@@ -13,6 +13,12 @@
             </button>
             
             <button id="btnSendMessageAllClient">Tüm Clientlara Gönder</button>
+            <button id="btnSendMessageCallerClient">İstek Yapan Client'a Gönder</button>
+            <br/>
+            <br/>
+            
+            <div id="divAllClientMessages"></div>
+            <div id="divCallerClientMessages"></div>
         </div>
     </div>
 </div>
