feat: Added buttons for joining and leaving groups A and B in the Index.cshtml view.
* Implemented JavaScript functions to manage group membership and send messages to group clients.
* This improves the codebase by enabling real-time group communication and user interaction with groups.
* Introduced a dynamic list display for current group memberships, enhancing user experience.
* Added error handling for group membership actions to ensure better feedback for users.

--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
@@ -25,13 +25,26 @@
             </div>
             <br/>
             <br/>
+            
+            <div>
+                <hr/>
+                <div id="groupList" class="alert alert-warning" role="alert"></div>
+                <button id="btnGroupAAdd" class="btn btn-success mx-1 my-1">A Grubuna Katıl</button>
+                <button id="btnGroupARemove" class="btn btn-danger mx-1 my-1">A Grubundan Çık</button>
+                <button id="btnGroupBAdd" class="btn btn-success mx-1 my-1">B Grubuna Katıl</button>
+                <button id="btnGroupBRemove" class="btn btn-danger mx-1 my-1">B Grubundan Çık</button>
+                <button id="btnGroupASendMessage" class="btn btn-secondary mx-1 my-1">A Grubuna Mesaj Gönder</button>
+                <button id="btnGroupBSendMessage" class="btn btn-dark mx-1 my-1">B Grubuna Mesaj Gönder</button>
+            </div>
 
             <div style="color: red" id="divAllClientMessages"></div>
             <div style="color: blue" id="divCallerClientMessages"></div>
             <div style="color: green" id="divOthersClientMessages"></div>
-            <div style="color: green" id="divIndividualClientMessages"></div>
+            <div style="color: darkgrey" id="divIndividualClientMessages"></div>
+            <div style="color: darkorange" id="divGroupClientMessages"></div>
             
          
+            
             
         </div>
     </div>
