--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Index.cshtml
@@ -36,6 +36,8 @@
                 <button id="btnGroupASendMessage" class="btn btn-secondary mx-1 my-1">A Grubuna Mesaj Gönder</button>
                 <button id="btnGroupBSendMessage" class="btn btn-dark mx-1 my-1">B Grubuna Mesaj Gönder</button>
             </div>
+            
+            <button id="btnSendTypedMessageAllClient" class="btn btn-outline-primary mx-1 my-1">İstek Yapan Tüm Clientlar'a Typed Message Gönder</button>
 
             <div style="color: red" id="divAllClientMessages"></div>
             <div style="color: blue" id="divCallerClientMessages"></div>
