--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Stream.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Stream.cshtml
@@ -7,3 +7,5 @@
 <h1>SignalR Stream</h1>
 <input class="form-control" type="text" id="txtStream" value="ahmet;mehmet;hasan;emre;ayşe"/>
 <button class="btn btn-primary my-2" id="btnFromClientToHub">Data Gönder(by Chunk)</button>
+
+<div class="alert alert-info" id="streamBox"></div>
