--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Stream.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.Web/Views/Home/Stream.cshtml
@@ -8,5 +8,6 @@
 <input class="form-control" type="text" id="txtStream" value="ahmet;mehmet;hasan;emre;ayşe"/>
 <button class="btn btn-primary my-2" id="btnFromClientToHub">Data Gönder(by Chunk)</button>
 <button class="btn btn-primary my-2" id="btnProductFromClientToHub">Data Gönder(by Chunk)</button>
+<button class="btn btn-primary my-2" id="btnFromHubToClient">Hub'tan stream olarak data al(by Chunk)</button>
 
 <div class="alert alert-info" id="streamBox"></div>
