--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/Index.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/Index.cshtml
@@ -3,6 +3,12 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <h1 class="display-4">Hoşgeldin @User.Identity.Name</h1>
+    }
+    else
+    {
+        <h2>Üye Olunuz</h2>
+    }
 </div>
