--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/SignIn.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/SignIn.cshtml
@@ -1,6 +1,26 @@
+@model SignalR.SampleProject.Models.ViewModels.SignInViewModel
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<h1>SignIn</h1>
+<div class="row">
+    <div class="col-md-4 col offset-md-4">
+        <div asp-validation-summary="ModelOnly"></div>
+        <form asp-controller="Home" asp-action="SignIn" method="post">
+            <h2>SignIn</h2>
+            <div class="form-group">
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <button type="submit" class="btn btn-primary">Sign In</button>
+        </form>
+    </div>
+</div>
