feat(HomeController): add product creation and retrieval logic
* Implemented logic to create default products for a user if none exist
* Updated ProductList action to fetch and display products associated with the user

--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
@@ -1,6 +1,25 @@
+@model List<SignalR.SampleProject.Models.Entities.Product>
 @{
     ViewBag.Title = "title";
     Layout = "_Layout";
 }
 
-<h2>title</h2>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Description</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var product in Model)
+    {
+        <tr>
+            <td>@product.Name</td>
+            <td>@product.Price</td>
+            <td>@product.Description</td>
+        </tr>
+    }
+    </tbody>
+</table>
