--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
@@ -4,6 +4,33 @@
     Layout = "_Layout";
 }
 
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $("#btnCreateExcel").click(function () {
+                $.ajax({
+                    url: "/Home/CreateExcel",
+                    type: "GET",
+                    dataType: "json",
+                    success: function (data) {
+                        console.log(data)
+                        $(".toast-body").html("Excel Oluşturma isteği alınmıştır. Tamamlandığında bilgilendirileceksiniz.");
+                        $("#liveToast").show();
+                        toastTimeOut = setTimeout(() => {
+                            $("#liveToast").hide();
+                        },3000)
+                    },
+                    error: function (err) {
+                        console.error(err);
+                    }
+                })
+            })
+        })
+    </script>
+}
+
+<p><a class="btn btn-primary" href="#" id="btnCreateExcel">Create Excel</a></p>
+
 <table class="table">
     <thead>
     <tr>
