feat(signalr/ui): integrate SignalR for real-time Excel notifications
* Added SignalR script to `_Layout.cshtml`.
* Set up SignalR connection in `site.js` for alerting file download readiness.
* Enhanced error handling in `ProductList.cshtml` to alert non-members.

--- a/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
+++ b/SignalRIleRealtimeUygulamaGelistirme/SignalR/SignalR.SampleProject/Views/Home/ProductList.cshtml
@@ -21,7 +21,8 @@
                         },3000)
                     },
                     error: function (err) {
-                        console.error(err);
+                        console.error(err)
+                        alert("Excel dosyasını indirebilmeniz için üye olmanız gerekmektedir. ")
                     }
                 })
             })
